Amended clean data to debug it and removed extraneous rows in Table1

--- a/src/5.Table1.ipynb
+++ b/src/5.Table1.ipynb
@@ -282,8 +282,7 @@
     "    Returns:\n",
     "    pd.DataFrame: DataFrame containing the losses and assets for each bank.\n",
     "    \"\"\"  \n",
-    "    # Insert the price changes for each treasury bond, calculated below are the maximum percentage price changes in the dates for each bucket\n",
-    "\n",
+    "    # Calculate the price change for each treasury bond\n",
     "    price_change = {\n",
     "        '<1y': -0.02,\n",
     "        '1y-3y': -0.06,\n",
@@ -713,7 +712,7 @@
     "    with open(path, \"w\") as text_file:\n",
     "        text_file.write(latex_table_string)\n",
     "\n",
-    "    print(table_1)\n"
+    "    print(table_1)"
    ]
   }
  ],
