Added in unit tests

--- a/src/5.Table1.ipynb
+++ b/src/5.Table1.ipynb
@@ -1126,6 +1126,189 @@
     "\n",
     "    print(table_1)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import unittest\n",
+    "import pandas as pd\n",
+    "import re\n",
+    "\n",
+    "\n",
+    "\"\"\"\n",
+    "This script is designed to verify that key values in a DataFrame called table_1 closely match expected reference values. \n",
+    "It begins by defining helper functions: one (parse_value) converts formatted numeric strings like \"2.2T\" or \"347.6M\" into their corresponding float values \n",
+    "by interpreting suffixes (T for trillions, B for billions, and M for millions) and removing extraneous characters, while the other (approximate_equal) checks \n",
+    "if two numbers are within a specified tolerance. The main component is a unittest TestCase class that takes table_1 \n",
+    "and a dictionary of reference values as parameters and then runs tests on specific rows—such as \"Aggregate Loss\", \"Number of Banks\", \n",
+    "and \"Share RMBS\"—to ensure the actual values fall within acceptable tolerances of the expected ones. A helper function \n",
+    "builds a test suite from these tests, and the main block demonstrates how to execute the tests, \n",
+    "thereby ensuring that the computed values in table_1 are sufficiently close to the original reference data without hard-coding the values globally.\n",
+    "\"\"\"\n",
+    "\n",
+    "def parse_value(value_str):\n",
+    "    \"\"\"\n",
+    "    Convert a string like '2.2T', '347.6M', '99.7B', or '6.5' into a float.\n",
+    "    Handles negatives and removes extra characters (like commas or parentheses).\n",
+    "    \"\"\"\n",
+    "    # Clean up the string\n",
+    "    value_str = value_str.strip().replace(',', '')\n",
+    "    value_str = value_str.strip('()')\n",
+    "    \n",
+    "    sign = 1\n",
+    "    if value_str.startswith('-'):\n",
+    "        sign = -1\n",
+    "        value_str = value_str[1:]\n",
+    "    \n",
+    "    # Extract numeric part and unit\n",
+    "    match = re.match(r'([\\d\\.]+)([TBM]*)', value_str)\n",
+    "    if not match:\n",
+    "        try:\n",
+    "            return sign * float(value_str)\n",
+    "        except ValueError:\n",
+    "            raise ValueError(f\"Cannot parse value string: {value_str}\")\n",
+    "    \n",
+    "    num_part = float(match.group(1))\n",
+    "    unit = match.group(2)\n",
+    "    \n",
+    "    multiplier = 1.0\n",
+    "    if unit == 'T':\n",
+    "        multiplier = 1e12\n",
+    "    elif unit == 'B':\n",
+    "        multiplier = 1e9\n",
+    "    elif unit == 'M':\n",
+    "        multiplier = 1e6\n",
+    "        \n",
+    "    return sign * num_part * multiplier\n",
+    "\n",
+    "def approximate_equal(actual, expected, tolerance):\n",
+    "    \"\"\"Return True if actual is within ±tolerance of expected.\"\"\"\n",
+    "    return abs(actual - expected) <= tolerance\n",
+    "\n",
+    "class TestTable1Proximity(unittest.TestCase):\n",
+    "    \"\"\"\n",
+    "    A TestCase class that compares key values in table_1\n",
+    "    against expected (reference) values. Both table_1 and the\n",
+    "    reference values are provided as parameters.\n",
+    "    \"\"\"\n",
+    "    def __init__(self, methodName='runTest', table_1=None, reference=None):\n",
+    "        super(TestTable1Proximity, self).__init__(methodName)\n",
+    "        self.table_1 = table_1\n",
+    "        self.reference = reference\n",
+    "\n",
+    "    def test_proximity_aggregate_loss(self):\n",
+    "        \"\"\"\n",
+    "        Check that the 'Aggregate Loss' row in each column is within tolerance\n",
+    "        of the expected reference value.\n",
+    "        \"\"\"\n",
+    "        row_label = 'Aggregate Loss'\n",
+    "        for col, (expected_val, tolerance) in self.reference[row_label].items():\n",
+    "            with self.subTest(column=col):\n",
+    "                actual_str = str(self.table_1.loc[row_label, col])\n",
+    "                actual_num = parse_value(actual_str)\n",
+    "                condition = approximate_equal(actual_num, expected_val, tolerance)\n",
+    "                self.assertTrue(\n",
+    "                    condition,\n",
+    "                    msg=(f\"Aggregate Loss mismatch for column '{col}': \"\n",
+    "                         f\"got {actual_num}, expected {expected_val} ± {tolerance}\")\n",
+    "                )\n",
+    "                if condition:\n",
+    "                    print(f\"Passed test to check tolerance of '{row_label}' in column '{col}': \"\n",
+    "                          f\"got {actual_num}, expected {expected_val} ± {tolerance}\")\n",
+    "\n",
+    "    def test_number_of_banks(self):\n",
+    "        \"\"\"\n",
+    "        Check that the 'Number of Banks' row in each column is within tolerance\n",
+    "        of the expected reference value.\n",
+    "        \"\"\"\n",
+    "        row_label = 'Number of Banks'\n",
+    "        for col, (expected_val, tolerance) in self.reference[row_label].items():\n",
+    "            with self.subTest(column=col):\n",
+    "                actual_str = str(self.table_1.loc[row_label, col])\n",
+    "                try:\n",
+    "                    actual_num = float(actual_str)\n",
+    "                except ValueError:\n",
+    "                    actual_num = parse_value(actual_str)\n",
+    "                condition = approximate_equal(actual_num, expected_val, tolerance)\n",
+    "                self.assertTrue(\n",
+    "                    condition,\n",
+    "                    msg=(f\"Number of Banks mismatch for column '{col}': \"\n",
+    "                         f\"got {actual_num}, expected {expected_val} ± {tolerance}\")\n",
+    "                )\n",
+    "                if condition:\n",
+    "                    print(f\"Passed test to check tolerance of '{row_label}' in column '{col}': \"\n",
+    "                          f\"got {actual_num}, expected {expected_val} ± {tolerance}\")\n",
+    "\n",
+    "    def test_share_rmbs(self):\n",
+    "        \"\"\"\n",
+    "        Check that the 'Share RMBS' row in each column is within tolerance\n",
+    "        of the expected reference value.\n",
+    "        \"\"\"\n",
+    "        row_label = 'Share RMBS'\n",
+    "        for col, (expected_val, tolerance) in self.reference[row_label].items():\n",
+    "            with self.subTest(column=col):\n",
+    "                actual_str = str(self.table_1.loc[row_label, col])\n",
+    "                actual_num = parse_value(actual_str)\n",
+    "                condition = approximate_equal(actual_num, expected_val, tolerance)\n",
+    "                self.assertTrue(\n",
+    "                    condition,\n",
+    "                    msg=(f\"Share RMBS mismatch for column '{col}': \"\n",
+    "                         f\"got {actual_num}, expected {expected_val} ± {tolerance}\")\n",
+    "                )\n",
+    "                if condition:\n",
+    "                    print(f\"Passed test to check tolerance of '{row_label}' in column '{col}': \"\n",
+    "                          f\"got {actual_num}, expected {expected_val} ± {tolerance}\")\n",
+    "\n",
+    "def load_tests(table_1, reference):\n",
+    "    \"\"\"\n",
+    "    Build and return a unittest.TestSuite using the provided table_1 DataFrame and\n",
+    "    reference values.\n",
+    "    \n",
+    "    Args:\n",
+    "        table_1 (pd.DataFrame): The DataFrame to test.\n",
+    "        reference (dict): A dictionary of reference values.\n",
+    "    \n",
+    "    Returns:\n",
+    "        unittest.TestSuite: The test suite.\n",
+    "    \"\"\"\n",
+    "    suite = unittest.TestSuite()\n",
+    "    # Add each test by specifying the test method name and passing table_1 and reference\n",
+    "    suite.addTest(TestTable1Proximity('test_proximity_aggregate_loss', table_1=table_1, reference=reference))\n",
+    "    suite.addTest(TestTable1Proximity('test_number_of_banks', table_1=table_1, reference=reference))\n",
+    "    suite.addTest(TestTable1Proximity('test_share_rmbs', table_1=table_1, reference=reference))\n",
+    "    return suite\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    \n",
+    "    # Define the reference dictionary with expected values and tolerances.\n",
+    "    reference = {\n",
+    "        'Aggregate Loss': {\n",
+    "            'All Banks': (2.2e12, 0.3e12),\n",
+    "            'Small Banks': (0.2e12, 0.1e12),\n",
+    "            'Large Ex GSIB Banks': (1.1e12, 0.2e12),\n",
+    "            'GSIB Banks': (1.0e12, 0.2e12)\n",
+    "        },\n",
+    "        'Number of Banks': {\n",
+    "            'All Banks': (4844, 100),\n",
+    "            'Small Banks': (4095, 100),\n",
+    "            'Large Ex GSIB Banks': (732, 50),\n",
+    "            'GSIB Banks': (17, 5)\n",
+    "        },\n",
+    "        'Share RMBS': {\n",
+    "            'All Banks': (6.5, 2.0),\n",
+    "            'Small Banks': (5.6, 2.0),\n",
+    "            'Large Ex GSIB Banks': (10.8, 3.0),\n",
+    "            'GSIB Banks': (17.9, 3.0)\n",
+    "        },\n",
+    "    }\n",
+    "    \n",
+    "    # Build and run the test suite using the provided table_1 and reference values.\n",
+    "    suite = load_tests(table_1, reference)\n",
+    "    unittest.TextTestRunner().run(suite)\n"
+   ]
   }
  ],
  "metadata": {
@@ -1144,7 +1327,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
