--- a/src/5.Table1.ipynb
+++ b/src/5.Table1.ipynb
@@ -24,6 +24,7 @@
     "\n",
     "import os\n",
     "import time\n",
+    "#watch out\n",
     "import pandas as pd\n",
     "from selenium import webdriver\n",
     "from selenium.webdriver.common.by import By\n",
