--- a/src/1.dataPullAndMakeDataTidy.ipynb
+++ b/src/1.dataPullAndMakeDataTidy.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading library list...\n",
+      "Done\n",
+      "Loading library list...\n",
+      "Done\n",
+      "Loading library list...\n",
+      "Done\n"
+     ]
+    }
+   ],
+   "source": [
+    "load_WRDS.main()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +83,22 @@
       "Cookie consent accepted.\n",
       "Clicked the '10 Year' button.\n",
       "Clicked the 'Export' button.\n",
-      "7-10 downloaded\n",
+      "7-10 downloaded\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\kramm\\AppData\\Local\\Temp\\ipykernel_488\\3137195048.py:426: FutureWarning: Downcasting object dtype arrays on .fillna, .ffill, .bfill is deprecated and will change in a future version. Call result.infer_objects(copy=False) instead. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "  treasury_prices = treasury_prices.set_index(\"date\").asfreq(\"D\").ffill()\n",
+      "[*********************100%***********************]  1 of 1 completed"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "                     date  sp 1-3\n",
       "0     2019-03-08 00:00:00   322.2\n",
       "1     2019-03-11 00:00:00  322.18\n",
@@ -103,17 +140,14 @@
       "1246  2024-02-29 00:00:00  593.04\n",
       "1247  2024-03-01 00:00:00  595.88\n",
       "\n",
-      "[1248 rows x 2 columns]\n",
-      "YF.download() has changed argument auto_adjust default to True\n"
+      "[1248 rows x 2 columns]\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\kramm\\AppData\\Local\\Temp\\ipykernel_23964\\723143948.py:442: FutureWarning: Downcasting object dtype arrays on .fillna, .ffill, .bfill is deprecated and will change in a future version. Call result.infer_objects(copy=False) instead. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
-      "  treasury_prices = treasury_prices.set_index(\"date\").asfreq(\"D\").ffill()\n",
-      "[*********************100%***********************]  1 of 1 completed\n"
+      "\n"
      ]
     }
    ],
@@ -595,13 +629,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "treasury_prices.to_csv(\"Tres.csv\", index=False)\n",
     "df_iShare_MBS_ETF.to_csv(\"MBS.csv\", index=False)\n",
-    "df_SP_Treasury_bond_index.to_csv(\"TresIndex.csv\", index=False)"
+    "df_SP_Treasury_bond_index.to_csv(\"TresIndex.csv\",index=False)"
    ]
   },
   {
@@ -613,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -636,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -654,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -961,7 +995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
