--- a/src/6.TableA1FigureA1.ipynb
+++ b/src/6.TableA1FigureA1.ipynb
@@ -27,13 +27,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "bank_asset = pd.read_csv('WRDSasset.csv', index_col=0)\n",
     "\n",
     "bank_liability = pd.read_csv('WRDSliability.csv', index_col=0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Analysis\n",
+    "\n",
+    "For the bank asset correlation matrix, it is revealed that the bank assets are primarily composed of loans and securities, with both showing a strong correlation to total assets. Total loans (0.97 correlation) are a major driver of asset growth, indicating that lending is a core function for these banks. Among loan types, real estate loans (0.92 correlation with total assets, 0.96 with total loans) play a dominant role, suggesting that mortgages form a significant portion of bank portfolios. Commercial mortgages (0.76 with total assets, 0.85 with total loans) and consumer loans (0.83 with total assets, 0.87 with total loans) are also key, though slightly less significant.\n",
+    "\n",
+    "Banks with larger asset bases tend to hold more cash (0.97 correlation), likely as a risk-mitigation strategy, and also invest heavily in securities (0.96 correlation), including Treasuries and mortgage-backed securities. However, short-term liquidity instruments like Fed Funds Sold (0.03-0.07 correlation) and Reverse Repos (0.61-0.79 correlation) have weaker relationships with total assets, indicating that interbank lending and repo transactions are not major components of the balance sheet but still play a role in cash management.\n",
+    "\n",
+    "Overall, this suggests that banks balance their portfolios between lending, liquidity, and securities investments, with a strong reliance on real estate and commercial lending while maintaining liquidity buffers through cash and investment holdings."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import seaborn as sns\n",
+    "\n",
+    "selected_fields = [\n",
+    "    \"Total Asset\", \"Total_Loan\", \"cash\", \"security_total\",\n",
+    "    \"Real_Estate_Loan\", \"Commerical_Mortgage\", \"Consumer_Loan\",\n",
+    "    \"Fed_Fund_Sold\", \"Reverse_Repo\"\n",
+    "]\n",
+    "\n",
+    "# Filter dataset\n",
+    "bank_asset_filtered = bank_asset[selected_fields]\n",
+    "\n",
+    "# Compute correlation\n",
+    "corr_matrix = bank_asset_filtered.corr()\n",
+    "\n",
+    "# Plot heatmap\n",
+    "plt.figure(figsize=(8,6))\n",
+    "sns.heatmap(corr_matrix, annot=True, cmap=\"coolwarm\", fmt=\".2f\")\n",
+    "plt.title(\"Simplified Bank Asset Correlation Matrix\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The bank liability correlation matrix highlights that deposits are the primary driver of bank liabilities, with uninsured deposits playing a significant role in funding. While banks also use repo and Fed Fund purchases for liquidity, these sources are less critical than deposits. The strong correlation between total liabilities and total equity suggests that banks are balancing their funding needs with appropriate capital reserves, ensuring financial stability. However, banks with higher uninsured deposits and repo activity may have increased risk exposure in times of market stress."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Bank Liability Analysis\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Select only key fields for analysis\n",
+    "selected_fields = [\n",
+    "    \"Total Liability\", \"Domestic Deposit\", \"Insured Deposit\", \"Uninsured Deposit\",\n",
+    "    \"Repo\", \"Fed Fund Purchase\", \"Other Liability\", \"Total Equity\"\n",
+    "]\n",
+    "\n",
+    "# Filter dataset\n",
+    "bank_liability_filtered = bank_liability[selected_fields]\n",
+    "\n",
+    "# Compute correlation\n",
+    "corr_matrix = bank_liability_filtered.corr()\n",
+    "\n",
+    "# Plot heatmap\n",
+    "plt.figure(figsize=(8,6))\n",
+    "sns.heatmap(corr_matrix, annot=True, cmap=\"coolwarm\", fmt=\".2f\")\n",
+    "plt.title(\"Simplified Bank Liability Correlation Matrix\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Asset vs Liability Comparison\n",
+    "\n",
+    "The Loan-to-Deposit Ratio Distribution shows that most banks maintain a ratio close to 1.0, indicating that they lend an amount approximately equal to their deposit base. This suggests a balanced approach to lending, where banks are neither overly aggressive nor too conservative in utilizing deposits. However, the distribution is right-skewed, with a few banks having significantly higher ratios (above 2.0, and some even exceeding 4.0-6.0). These banks lend far more than their available deposits, potentially relying on external funding sources like interbank borrowing or repos, which may expose them to liquidity risks if those sources dry up. Conversely, some banks have low loan-to-deposit ratios (below 0.5), meaning they hold excess deposits relative to their lending activity. This could indicate a more conservative lending strategy or a preference for alternative revenue streams such as securities investments. Overall, while most banks follow prudent lending practices, outliers with very high or very low ratios may warrant closer scrutiny."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Merge datasets on 'rssd9001' (assuming this is a bank identifier)\n",
+    "bank_data = pd.merge(bank_asset, bank_liability, on=\"rssd9001\", suffixes=(\"_asset\", \"_liability\"))\n",
+    "\n",
+    "# Loan-to-deposit ratio\n",
+    "bank_data[\"Loan_to_Deposit_Ratio\"] = bank_data[\"Total_Loan\"] / (bank_data[\"Domestic Deposit\"] + 1)  # Avoid divide by zero\n",
+    "plt.figure(figsize=(10,5))\n",
+    "sns.histplot(bank_data[\"Loan_to_Deposit_Ratio\"], bins=50, kde=True)\n",
+    "plt.title(\"Loan-to-Deposit Ratio Distribution\")\n",
+    "plt.xlabel(\"Loan-to-Deposit Ratio\")\n",
+    "plt.show()"
    ]
   },
   {
@@ -1873,7 +1976,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
