--- a/src/1.dataPullAndMakeDataTidy.ipynb
+++ b/src/1.dataPullAndMakeDataTidy.ipynb
@@ -1,6 +1,24 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "File: dataPullAndMakeDataTidy.ipynb\n",
+    "Description: This script automates the data pull from WRDS and S&P Global using \n",
+    "             Selenium and yfinance. It cleans and tidies the downloaded data, preparing \n",
+    "             it for subsequent analysis. The code handles multiple data sources and \n",
+    "             formats for comprehensive financial research.\n",
+    "Based on Nikko Zhang's project.\n",
+    "Usage: Execute the script in an environment configured with Selenium, yfinance, and \n",
+    "       other dependencies.\n",
+    "\"\"\"\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
