--- a/src/2.briefTourOfData.ipynb
+++ b/src/2.briefTourOfData.ipynb
@@ -2,6 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "File: briefTourOfData.ipynb\n",
+    "Description: This script offers a brief tour of the cleaned WRDS asset and liability \n",
+    "             data used to build Table A1 and Figure A1. It loads the datasets and displays \n",
+    "             key metrics to provide an initial overview of the data structure and quality.\n",
+    "Usage: Run the script to perform preliminary data exploration.\n",
+    "\"\"\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
