--- a/src/3.summaryStats.ipynb
+++ b/src/3.summaryStats.ipynb
@@ -2,6 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "File: summaryStats.ipynb\n",
+    "Description: This script performs exploratory data analysis on multiple financial \n",
+    "             datasets (MBS, Treasury, and WRDS data). It generates summary statistics, \n",
+    "             time series plots, and correlation heatmaps to provide insights into market trends.\n",
+    "Usage: Execute this script in a Python environment with libraries such as pandas, \n",
+    "       matplotlib, and seaborn installed.\n",
+    "\"\"\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
