--- a/src/4.latexSummaryStats.ipynb
+++ b/src/4.latexSummaryStats.ipynb
@@ -2,6 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "File: latexSummaryStats.ipynb\n",
+    "Description: This script analyzes WRDS asset and liability datasets to extract \n",
+    "             summary statistics and then creates a LaTeX document reporting these metrics.\n",
+    "             It includes functions to parse notebook code and format the output for LaTeX.\n",
+    "Usage: Run the script after ensuring all required CSV files are available.\n",
+    "\"\"\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [
