--- a/src/5.Table1.ipynb
+++ b/src/5.Table1.ipynb
@@ -1,6 +1,23 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "File: Table1.ipynb\n",
+    "Description: This script pulls and processes financial data from multiple sources \n",
+    "             (including WRDS, web-scraped S&P Treasury Index data, and yfinance) \n",
+    "             to build Table 1. It performs data loading, cleaning, correlation analysis, \n",
+    "             and visualization to support monetary tightening research.\n",
+    "Built off of Peizhe Huang's project.\n",
+    "Usage: Execute this script to generate the necessary tables and charts.\n",
+    "\"\"\"\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
