--- a/src/6.TableA1FigureA1.ipynb
+++ b/src/6.TableA1FigureA1.ipynb
@@ -1,6 +1,23 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "File: TableA1FigureA1.ipynb\n",
+    "Description: This script processes bank asset and liability data to generate \n",
+    "             Table A1 and Figure A1, summarizing key metrics and correlations.\n",
+    "             It loads data from WRDS, applies transformations, and visualizes \n",
+    "             results to support the analysis of bank portfolios.\n",
+    "Based on Nikko Zhang's project.\n",
+    "Usage: Run this script in a Python environment with the required libraries installed.\n",
+    "\"\"\"\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
