--- a/src/7.latexOverview.ipynb
+++ b/src/7.latexOverview.ipynb
@@ -2,6 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "File: latexOverview.ipynb\n",
+    "Description: This LaTeX document generates an overview report of bank asset composition, liability structures, and treasury securities analysis. It includes sections on introduction, methodology, data challenges, and analytical insights with accompanying figures and tables.\n",
+    "Based on research of financial data spanning 2019–2024.\n",
+    "Usage: Compile this document using a LaTeX compiler (e.g., pdflatex).\n",
+    "\"\"\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
    "outputs": [
