--- a/src/7.latexOverview.ipynb
+++ b/src/7.latexOverview.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +440,7 @@
     "\\usepackage{xcolor}\n",
     "\n",
     "\\title{Bank Asset Composition and Treasury Securities Analysis}\n",
-    "\\author{Financial Research Team}\n",
+    "\\author{Xitaaz Rampersad and Samuel Rubidge}\n",
     "\\date{\\today}\n",
     "\n",
     "\\begin{document}\n",
